--- a/AIWorryJar/Components/App.razor
+++ b/AIWorryJar/Components/App.razor
@@ -12,7 +12,7 @@
     <HeadOutlet />
 </head>
 
-<body>
+<body class="bg-dark text-light">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
