--- a/AIWorryJar/Components/Layout/MainLayout.razor
+++ b/AIWorryJar/Components/Layout/MainLayout.razor
@@ -1,6 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
+<div class="row">
+    <div class="w-50 mx-auto text-center">
+        <h3>AI Worry Jar</h3>
+    </div>
+</div>
+
+<div class="page w-50 mx-auto text-center">
     <main>
         <article class="content px-4">
             @Body
