--- a/AIWorryJar/Components/Pages/Jar.razor.css
+++ b/AIWorryJar/Components/Pages/Jar.razor.css
@@ -1,3 +1,15 @@
 .form-rounded {
     border-radius: 1rem;
 }
+
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s linear;
+}
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 2s, opacity 2s linear;
+}
