--- a/AIWorryJar/Components/Layout/MainLayout.razor
+++ b/AIWorryJar/Components/Layout/MainLayout.razor
@@ -14,6 +14,12 @@
     </main>
 </div>
 
+<div class="row">
+    <div class="w-50 mx-auto text-center">
+        <Footer />
+    </div>
+</div>
+
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
