Moved gpt to DI

--- a/AIWorryJar/Components/Pages/Jar.razor
+++ b/AIWorryJar/Components/Pages/Jar.razor
@@ -1,7 +1,5 @@
 @rendermode InteractiveServer
-@using ChatGPT.Net;
-@using Microsoft.Extensions.Configuration
-@inject IConfiguration Configuration
+@inject ChatGptService ChatGptService
 
 <PageTitle>AIWorryJar</PageTitle>
 
@@ -30,9 +28,7 @@
     private async Task LetItGoClicked()
     {
         try{
-            var bot = new ChatGpt(Configuration["OPENAI_API_KEY"]);
-
-            gptResponse = await bot.Ask("You are a worry jar and I just told you my worries. In a short and soothing sentence tell me everything will be ok.");
+            gptResponse = await ChatGptService.BotResponse("You are a worry jar and I just told you my worries. In a short and soothing sentence tell me everything will be ok.");
         
             if(gptResponse == null)
             {
