--- a/AIWorryJar/Components/Pages/Jar.razor
+++ b/AIWorryJar/Components/Pages/Jar.razor
@@ -28,7 +28,7 @@
     private async Task LetItGoClicked()
     {
         try{
-            gptResponse = await ChatGptService.BotResponse("You are a worry jar and I just told you my worries. In a short and soothing sentence tell me everything will be ok.");
+            gptResponse = ChatGptService.BotResponse();
         
             if(gptResponse == null)
             {
