--- a/AIWorryJar/Components/Pages/Jar.razor.css
+++ b/AIWorryJar/Components/Pages/Jar.razor.css
@@ -2,6 +2,11 @@
     border-radius: 1rem;
 }
 
+.darkTextArea {
+    background-color: rgb(33, 37, 41);
+    color: rgb(248, 249, 250);
+}
+
 .visible {
     visibility: visible;
     opacity: 1;
@@ -12,4 +17,9 @@
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s 2s, opacity 2s linear;
+}
+
+.textOut {
+    color: rgba(33, 37, 41, 0);
+    transition: color 2s linear;
 }
